# dreamerv3

./: pyproject.toml
assets/: dreamer_quad_minimal.xml
dreamerv3/: configs.yaml  main.py
embodied/envs/: from_gym.py  skydreamer.py
embodied/perf/: test_driver.py
